--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -4,13 +4,41 @@
 %    > Mail: xiqian013@live.com 
 %    > Created Time: 2015-11-21 23:50:45
 %************************************************************************
-
 \documentclass[UTF8,a4paper,12pt]{ctexart}
 \usepackage{geometry}
 \geometry{left=2.5cm,right=2.5cm,top=2.5cm,bottom=2.5cm}
 \usepackage{hyperref}
+\usepackage{clrscode}
 \begin{document}
     \pagestyle{plain}
     \section*{\huge{notes}}
-    \section{Goundations}
+    \section{Foundations}
+        \subsection{The Role of Algorithms in Computing}
+            \subsubsection{Algorithms}
+            \subsubsection{Algorithms as a technology}
+            \subsubsection{Problems}
+        \subsection{Getting Started}
+            \subsubsection{Insertion sort}
+                \textbf{Input}:A sequence of $n$ numbers $(a_1,a_2,\cdots,a_n)$.
+
+                \textbf{Output}:A permutation $(a'_1,a'_2,\cdots,a'_n)$ of the input sequence such that $a'_1 \leq a'_2 \leq \cdots \leq a'_n$.
+
+
+            \subsubsection{Analyzing algorithms}
+            \subsubsection{Designing algorithms}
+            \subsubsection{Problems}      
+\begin{codebox}
+	\Procname{$\proc{Insertion-Sort(A)}$}
+	\li \For $j \gets 2$ \To $\id{length}[A]$    \label{li:for}
+	\li     \Do $\id{key} \gets A[j]$            \label{li:for-begin}
+	\li         \Comment Insert $A[j]$ into the sorted sequence $A[1 \twodots j-1]$.
+	\li         $i \gets j-1$
+	\li         \While $i>0$ and $A[i]>\id{key}$ \label{li:while}
+	\li            \Do $A[i+1] \gets A[i]$       \label{li:while-begin}
+	\li                $i \gets i-1$             \label{li:while-end}
+	\End
+	\li         $A[i+1] \gets \id{key}$          \label{li:for-end}
+	\End
+\end{codebox}
+
 \end{document}
