--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -45,6 +45,7 @@
 
                 \textbf{Termination}:When the loop terminates,the invariant gives a useful property that helps show the algorithm is correct.
 
+                \textbf{Pseudocode conventions}
             \subsubsection{Analyzing algorithms}
             \subsubsection{Designing algorithms}
             \subsubsection{Problems}      
