--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -48,6 +48,15 @@
                 \textbf{Pseudocode conventions}
             \subsubsection{Analyzing algorithms}
             \subsubsection{Designing algorithms}
+                \textbf{The divide-and-conquer approach}:
+                
+                \textbf{Divide}:the problem into a number of subproblems that are smaller in instances of the same problem.
+
+                \textbf{Conquer}:the subproblems by solving them recursively.If the subproblem sizes are small enough,however,just solve the subproblems in a straightforward manner.
+
+                \textbf{combine}:the solutions to the subproblems into the solution for the original problem.
+
+                \textbf{merge sort}:
             \subsubsection{Problems}      
 
 \end{document}
